--- a/index.html
+++ b/index.html
@@ -53,7 +53,14 @@
         </li>
 
     </ul>
-
+<hr>
+    <h3 style="color: rgb(64, 104, 217);">Skills</h3>
+    <table style="background-color: rgb(190, 190, 241);">
+        <td>
+            C, C++, HTML, CSS, JavaScript, Sql
+        </td>
+    </table>
+    
 
    
     
